--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <div class="grid-container">
     <div class="card-1">
       <div class="card-header">
-        <img class="img-outer-ring-pp" src="./images/image-daniel.jpg" alt="avatar"/>
+        <img class="img-outer-ring-pp" src="images/image-daniel.jpg" alt="avatar"/>
         <div class="personal-info">
           <p>Daniel Clifford</p>
           <p>Verified Graduate</p>
@@ -35,7 +35,7 @@
     </div>
     <div class="card-2">
       <div class="card-header">
-        <img src="./images/image-jonathan.jpg" alt="avatar"/>
+        <img src="images/image-jonathan.jpg" alt="avatar"/>
         <div class="personal-info">
           <p>Jonathan Walters</p>
           <p>Verified Graduate</p>
@@ -51,7 +51,7 @@
     </div>
     <div class="card-3">
       <div class="card-header">
-        <img src="./images/image-jeanette.jpg" alt="avatar"/>
+        <img src="images/image-jeanette.jpg" alt="avatar"/>
         <div class="personal-info">
           <p>Jeanette Harmon</p>
           <p>Verified Graduate</p>
@@ -67,7 +67,7 @@
     </div>
     <div class="card-4">
       <div class="card-header">
-        <img class="img-outer-ring-pp" src="./images/image-patrick.jpg" alt="avatar"/>
+        <img class="img-outer-ring-pp" src="images/image-patrick.jpg" alt="avatar"/>
         <div class="personal-info">
           <p>Patrick Abrams</p>
           <p>Verified Graduate</p>
@@ -86,7 +86,7 @@
     </div>
     <div class="card-5">
       <div class="card-header">
-        <img src="./images/image-kira.jpg" alt="avatar"/>
+        <img src="images/image-kira.jpg" alt="avatar"/>
         <div class="personal-info">
           <p>Kira Whittle</p>
           <p>Verified Graduate</p>
